--- a/software/webprogramming/css/style.css
+++ b/software/webprogramming/css/style.css
@@ -1,20 +1,236 @@
-body {
-  background-color: white;
-  padding: 20px;
-}
-.container {
-  width: 252px;
+
+.dotmatrixcontainer {
+  width: 200px;
 }
 .cl {
   background-color: #A0A0A0;
   float: left;
   margin: 0px 1px 1px 0px;
-  width: 30px;
-  height: 30px;
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  border-radius: 30px;
+  width: 24px;
+  height: 24px;
+  -webkit-border-radius: 24px;
+  -moz-border-radius: 24px;
+  border-radius: 24px;
 }
 .red {
   background-color: #E80000;
 }
+
+/* Space out content a bit */
+body {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: white;
+}
+
+/* Everything but the jumbotron gets side spacing for mobile first views */
+.header,
+.marketing,
+.footer {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+/* Custom page header */
+.header {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #e5e5e5;
+}
+/* Make the masthead heading the same height as the navigation */
+.header h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 40px;
+}
+
+/* Custom page footer */
+.footer {
+  padding-top: 19px;
+  color: #777;
+  border-top: 1px solid #e5e5e5;
+}
+
+/* Customize container */
+@media (min-width: 768px) {
+  .container {
+    max-width: 730px;
+  }
+}
+.container-narrow > hr {
+  margin: 30px 0;
+}
+
+/* Main marketing message and sign up button */
+.jumbotron {
+  text-align: center;
+  border-bottom: 1px solid #e5e5e5;
+}
+.jumbotron .btn {
+  padding: 14px 24px;
+  font-size: 21px;
+}
+
+/* Supporting marketing content */
+.marketing {
+  margin: 40px 0;
+}
+.marketing p + h4 {
+  margin-top: 28px;
+}
+
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 768px) {
+  /* Remove the padding we set earlier */
+  .header,
+  .marketing,
+  .footer {
+    padding-right: 0;
+    padding-left: 0;
+  }
+  /* Space out the masthead */
+  .header {
+    margin-bottom: 30px;
+  }
+  /* Remove the bottom border on the jumbotron for visual effect */
+  .jumbotron {
+    border-bottom: 0;
+  }
+}
+
+
+/* links: outlines and underscores */  
+a.btn,      
+a.btn:active, 
+a.btn:focus, 
+
+button.btn:active, 
+button.btn:focus,   
+button.btn:active, 
+button.btn:focus, 
+
+.dropdown-menu li a,
+.dropdown-menu li a:active,
+.dropdown-menu li a:focus,
+.dropdown-menu li a:hover,
+
+ul.dropdown-menu li a,
+ul.dropdown-menu li a:active,
+ul.dropdown-menu li a:focus,
+ul.dropdown-menu li a:hover,
+
+.nav-tabs li a,
+.nav-tabs li a:active,
+.nav-tabs li a:focus { outline:0px !important; -webkit-appearance:none;  text-decoration:none; }  
+
+</style>
+
+<style>
+/* panel */ 
+.panel {margin-top: 25px;}
+.panel .panel-heading { padding: 5px 5px 0 5px;}
+.panel .nav-tabs {border-bottom: none;}
+
+/* inactive tabs */ 
+.nav > li > a       { background-color: #f5f5f5; color: #676767; border-color: #dddddd; border-width: 1px; padding: 5px 15px; line-height: 2; -webkit-transition: all 0.75s; -moz-transition: all 0.75s; transition: all 0.75s; }} 
+.nav > li > a:active    { background-color: #f5f5f5; color: #676767;}
+.nav > li > a:focus     { background-color: #f5f5f5; color: #676767;} 
+.nav > li > a:hover     { background-color: #eeeeee; color: #676767; border-color: #dddddd;} 
+
+/* active tabs */ 
+.nav > li.active > a:hover  {color: #222222;} 
+
+/* table */ 
+
+.table > thead > tr > th, 
+.table > tbody > tr > th, 
+.table > tfoot > tr > th
+{
+background-color: #000000;
+color: #ffffff;
+border-bottom: 1px solid #F3F3F3;
+border-top: 1px solid #F3F3F3 !important;
+line-height: 1.42857;
+padding: 8px;
+vertical-align: top;
+}
+
+.table > thead > tr > td, 
+.table > tbody > tr > td, 
+.table > tfoot > tr > td 
+{
+border-top: 0px solid blue;
+line-height: 1.42857;
+padding: 8px;
+vertical-align: top;
+background-color: #F3F3F3;
+
+}
+
+.table-striped > tbody > tr:nth-child(2n+1) > td 
+{ 
+background-color: #ffffff;
+}
+
+/* buttons */ 
+.btn-default.btn-outline:active,
+.btn-default.btn-outline:focus, 
+.btn-default.btn-outline    { color: #676767; border-color: #676767; background-color: transparent; border-width: 2px; -webkit-transition: all 0.25s; -moz-transition: all 0.25s; transition: all 0.25s;}   
+.btn-default.btn-outline:hover  { color: #000000; border-color: #000000; background-color: transparent; border-width: 2px; -webkit-transition: all 0.75s; -moz-transition: all 0.75s; transition: all 0.75s; } 
+
+
+/* panel buttons */ 
+.btn-group button.btn.btn-outline.btn-default       { background-color: #f5f5f5; color: #676767; border-color: #dddddd; border-width: 1px; padding: 5px 15px; line-height: 2; -webkit-transition: all 0.75s; -moz-transition: all 0.75s; transition: all 0.75s; }} 
+.btn-group button.btn.btn-outline.btn-default:focus   { background-color: #f5f5f5;} 
+.btn-group button.btn.btn-outline.btn-default:active    { background-color: #f5f5f5;}
+.btn-group button.btn.btn-outline.btn-default:hover   { background-color: #eeeeee; border-width: 1px; -webkit-transition: all 0.75s; -moz-transition: all 0.75s; transition: all 0.75s; } 
+
+.btn-outline.btn-highlight  { color: #676767; border-color: #676767; background-color: transparent; border-width: 2px;}
+
+.display-title { font family: verdana, arial, helvetica; color:#008400;}
+
+
+ul.nav.nav-tabs li.btn-group.active > a.btn.btn-default
+{
+border: 1px solid #dddddd;
+background-color: #ffffff;
+border-right:0px;
+margin-right: 0px;
+border-bottom: 0px;
+}
+
+ul.nav.nav-tabs li.btn-group > a.btn.btn-default
+{
+border: 1px solid #F5F5F5;
+border-right:0px;
+margin-right: 0px;
+border-bottom: 0px;
+}
+
+ul.nav.nav-tabs > li.btn-group.active > a.btn.dropdown-toggle
+{
+border: 1px solid #dddddd;
+background-color: #ffffff;
+margin-left: 0px;
+border-left:0px;
+border-bottom: 0px;
+ 
+}
+
+ul.nav.nav-tabs > li.btn-group > a.btn.dropdown-toggle
+{
+border: 1px solid #F5F5F5;
+margin-left: 0px;
+border-left: 0px;
+border-bottom: 0px;
+}
+
+ ul.nav.nav-tabs li.btn-group a.btn.dropdown-toggle span.caret
+{
+color: #F5F5F5;
+}
+
+ ul.nav.nav-tabs li.btn-group.active > a.btn.dropdown-toggle > span.caret
+{
+color: #999999;
+}
+  
